--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic
+pydantic-settings
 python-dotenv==1.0.0
-openai==1.3.9
-google-generativeai==0.8.5
 httpx==0.25.2
+langchain-tavily
+langchain-chroma>=0.1.2
+chromadb
+langchain
+langchain_google_genai
+langchain_chroma
+langgraph
+langchain-openai
